Setup examples directory for testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,7 @@
         "format": "cpp",
         "stdfloat": "cpp",
         "__nullptr": "cpp",
-        "__tree": "cpp"
+        "__tree": "cpp",
+        "filesystem": "cpp"
     }
 }
