First pass on query vars, it's kinda mess

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,8 @@
         "stdfloat": "cpp",
         "__nullptr": "cpp",
         "__tree": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "__locale": "cpp",
+        "variables.h": "c"
     }
 }
